# serpens_dev_manager

./: .gitignore  AGENTS.md  LICENSE  README.md
python/: backend.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
