[package]
name = "serpens-dev-manager"
version = "1.0.0"
description = "A manager for Serpens scripting nodes Blender addon installations"
authors = ["CoreyCorza"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
